--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="info">INFO</string>
     <string name="height">Height</string>
     <string name="calculate_bmi">CALCULATE BMI</string>
+    <string name="extra_bmi">EXTRA_BMI</string>
 </resources>
